# App

./: .coverage  .gitignore  DocumentUploadForm.py  README.md  app.py  diagnosis_status.json  load_model_into_model_manager.ipynb  load_model_into_model_manager.py  requirements.txt  routes.py  runBeforeStart.ps1  runBeforeStart.sh  test_home.py  test_root.py
.devcontainer/: Dockerfile  devcontainer.json
ModelManagerForWebApp/: README.md  setup.cfg
ModelManagerForWebApp/src/model_manager_for_web_app/: config.py  managed_model.py  model_manager.py
_app/: config.py  file_handling.py  routes.py
_app/diagnosis/: __init__.py  config.py  diagnosis_runner.py  status_lock.py
models/: kevin_initial.model  kevin_test.model  kevin_test.model_info  sample_model.model  sample_model.model_info  testyboi.model  testyboi.model_info
reports/coverage/: coverage.xml  index.html
reports/junit/: junit.xml
static/: home.css  home.js  server.js
templates/: diagnosis.html  home.html
