[metadata]
name = model-manager-for-web-app
version = 0.0.1
author = Adin Solomon
author_email = adinbsolomon@gmail.com
description = testing
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    dill

[options.packages.find]
where = src